FlightPath 5.x Changelog
========================
 
2017-01-14
  Made more changes, to ensure that users cannot access another student's data by manipulating
  URL variables. 
 
 
2017-01-04
  Handful of extra changes to logout function, again, for Safari browser bug. 
  
  Added more HTML comments to the course_search_display_courses render api call, to give
  more spots for custom modules to dig in and change/add content.
  

2017-01-03
  Added additional unsetting of SESSION vars when cache is cleared, to erase any potential problems.
  
  Working on logout function, to address issue from Safari browser where SESSION is not being
  destroyed correctly.
  

2017-01-02
  Altered the way the renderapi handles markup, so it always gets a CSS class we can
  use later.  Also, added weights to the AdvisingScreen's display_popup_course_descroption.
  
  Made minor CSS tweaks in other places too.
  
  Minor display bug in user module, list of majors for student
  

2016-12-28
  Minor changes to System to suppress PHP warnings in one area.


2016-12-22
  Fixed a bug with substitutions, where the required courses was the same in two different
  degrees, and the substituted courses was ALSO the same.  FlightPath was applying the sub
  to the first instance of the course requirement, and not necessarily the one the user selected.
  
  Worked on an issue where when two users are working on the same student, they should only pull up
  draft changes that THEY made, not that the other user made.
  
  To guarantee draft advising sessions aren't loaded inappropriately, when a faculty user loads
  a student's advising session, the draft versions are deleted.  This is to correct a bug.
  
  Fixed display bug of student's catalog year, in what if, when it is set to the Student mode in
  the settings.
  
  Fixed SQL bug in system.install, user_roles table didn't have primary key set up correctly.
  