@@ -107,7 +107,16 @@ class _Course extends stdClass
     $this->specified_repeats = 0;
     $this->bool_exclude_repeat = false;
     $this->bool_specified_repeat = false;
-    $this->random_id = mt_rand(1,9999);
+    
+    // Give this course instance a "random" numeric id, meaning, it doesn't really mean anything.
+    // It used to actually be random, but we will use a simple increment instead to ensure it is unique.
+    if (!isset($GLOBALS['fp_courses_random_ids'])) {
+      $GLOBALS['fp_courses_random_ids'] = 10;
+    }
+
+    $this->random_id = $GLOBALS['fp_courses_random_ids']++;
+    
+    
     $this->display_status = "eligible";
     $this->course_list_fulfilled_by = new CourseList();
     $this->group_list_unassigned = new GroupList();
